ready for coding upload + back to old design

--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:fitsSystemWindows="true"
-    android:background="@color/grey">
+    android:background="@color/grey"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="10dp" >
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="56dp"
+        android:paddingTop="6dp"
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
 
@@ -28,62 +30,60 @@
             android:gravity="center"
             android:textSize="12dip"/>
 
-        <ImageView android:src="@drawable/camera"
+        <ImageView android:src="@drawable/photo"
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
-            android:layout_height="72dp"
+            android:layout_height="120dp"
             android:layout_marginBottom="24dp"
             android:layout_gravity="center_horizontal" />
 
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
+        <EditText
+            android:id="@+id/imageName"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
-            <EditText android:id="@+id/nameImage"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="text"
-                android:hint="Name"/>
-        </android.support.design.widget.TextInputLayout>
+            android:layout_marginBottom="10dp"
+            android:background="@color/white"
+            android:hint="Name"
+            android:inputType="text"
+            android:padding="10dp"
+            android:singleLine="true"
+            android:textColor="@color/black"
+            android:textColorHint="@color/darkgrey" />
 
         <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/radioGroup"
+            android:checkedButton="@+id/radioPublic"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <RadioButton android:id="@+id/radioPublic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Public"
-                android:onClick="onRadioButtonClicked"/>
+                android:text="Public"/>
             <RadioButton android:id="@+id/radioPrivate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Private"
-                android:onClick="onRadioButtonClicked"/>
+                android:text="Private"/>
         </RadioGroup>
 
-        <android.support.v7.widget.AppCompatButton
+        <Button
             android:id="@+id/btnCamera"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"
-            android:padding="12dp"
-            android:text="Camera"
+            android:layout_marginTop="20dip"
             android:background="@color/turqoise"
-            android:textColor="@color/white"/>
+            android:text="@string/btn_camera"
+            android:textColor="@color/white" />
 
-        <android.support.v7.widget.AppCompatButton
+        <Button
             android:id="@+id/btnUpload"
+            android:onClick="upload"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"
-            android:padding="12dp"
-            android:text="Upload"
+            android:layout_marginTop="10dip"
             android:background="@color/turqoise"
-            android:textColor="@color/white"/>
-
+            android:text="UPLOAD"
+            android:textColor="@color/white" />
     </LinearLayout>
-</ScrollView>
+
+</LinearLayout>
